supposed dark mode fix

--- a/styles/reset.css
+++ b/styles/reset.css
@@ -24,7 +24,7 @@ html {
 
 @media (prefers-color-scheme: dark) {
   .home::before {
-    background: #111318b1;
+    background: rgba(17,19,24,0.69);
   }
 
   .about {
@@ -33,10 +33,12 @@ html {
 
   .about p {
     background: #333a4d;
+    background-color: #333a4d;
+    color: #eee;
   }
 
   footer svg {
-    fill: #fff
+    fill: #fff;
   }
 
 
